--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.android.support:support-vector-drawable:25.3.0'
-    compile 'com.android.support:support-v4:25.3.0'
-    compile 'com.android.support:cardview-v7:25.3.0'
+
+
+
+
+
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:support-vector-drawable:25.4.0'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:cardview-v7:25.4.0'
     compile 'com.github.JesusM:HoloCircleSeekBar:v2.2.2'
-
-
-
-
+    compile 'com.stepstone.stepper:material-stepper:4.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
