--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-
-
-
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:design:25.4.0'
     compile 'com.android.support:support-vector-drawable:25.4.0'
@@ -38,7 +33,7 @@ dependencies {
     compile 'com.github.JesusM:HoloCircleSeekBar:v2.2.2'
     compile 'com.stepstone.stepper:material-stepper:4.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
-
+    compile 'com.google.code.gson:gson:2.3.1'
     testCompile 'junit:junit:4.12'
+    compile project(':jxl')
 }
