--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     testCompile 'junit:junit:4.12'
     compile project(':jxl')
+    compile project(':itext5-itext-pdfa-5.5.12')
 }
