--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         </activity>
         <activity android:name=".activities.MainWizardActivity"
+            android:windowSoftInputMode="stateUnchanged|adjustPan"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
